Let the hide configuration dialog look better

Now the columns are resized to fit there content.

REVIEW: 102210
BUG: 241277